--- a/2_web/0804/flex_item.css
+++ b/2_web/0804/flex_item.css
@@ -1,3 +1,28 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+h4 {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: Arial;
+}
+
+p {
+  font-family: Arial;
+}
+
+.container {
+  width: 1000px;
+  margin: 30px auto;
+}
+
+img {
+  display: block;
+}
+
 .flex-container {
   display: flex;
 }
