--- a/2_web/0804/flex_wrap.css
+++ b/2_web/0804/flex_wrap.css
@@ -1,3 +1,43 @@
+body {
+  margin: 5rem auto;
+  background-color: darkslategray;
+  color: white;
+}
+
+.base {
+  margin: 10px auto;
+  padding: 20px auto;
+  border: 10px solid yellow;
+}
+
+.base h2 {
+  text-align: center;
+}
+
+.base h3 {
+  text-align: center;
+}
+
+.box {
+  border: 10px solid lightblue;
+  height: 600px;
+}
+
+.base > .box > div {
+  padding: 20px 10px;
+  border: 5px solid white;
+  font-size: 50px;
+  text-align: center;
+}
+
+.base > .box > div:nth-child(odd) {
+  background: orange;
+}
+
+.base > .box > div:nth-child(even) {
+  background: green;
+}
+
 .flex-container{
   /* 정렬하려고하는 부모 요소에 선언 */
   display: flex;
