--- a/4_django/04_DJANGO_AUTH/templates/base.html
+++ b/4_django/04_DJANGO_AUTH/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    {% if request.user.is_authenticated %}
+    <!-- {% if request.user.is_authenticated %}
       <h3>Hello, {{ user }}</h3>
       <a href="{% url 'accounts:update' %}">회원정보수정</a>
       <form action="{% url 'accounts:logout' %}" method="POST">
@@ -23,7 +23,7 @@
     {% else %}
       <a href="{% url 'accounts:login' %}">LOGIN</a>
       <a href="{% url 'accounts:signup' %}">SIGNUP</a>
-    {% endif %}
+    {% endif %} -->
   
     {% block content %}
     {% endblock content %}
